2017-04-19  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Create more wrappers for various mpi*
	commands.
	* Driver.cpp: Remove -fmageec-gcc, -fmageec-g++ and
	-fmageec-gfortran arguments. Instead, find the compiler
	command to use by removing 'mageec-' from the front
	of the command word.

2017-04-12  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp (main): Initialize the 1NN machine learner.

2017-04-11  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp (main): For now, don't store the compilation
	command for each compilation. This takes up a huge amount of
	space (>2kB for each compilation).

2017-03-09  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp (main): When optimizing, only add a flag if it is
	actually enabled by the machine learner.

2017-03-03  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Add -fmageec-sql-trace argument to the Driver.

2017-02-22  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Don't allow both -fbranch-target-load-optimize and
	-fbranch-target-load-optimize2 to run.

2017-02-14  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Remove some flags unavailable in gcc 4.5
	* Parameter.h: Likewise.

2017-02-14  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp (main): Refactor. Always provide -O3 on the
	command line when both gathering and optimizing.

2017-01-25  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp (main): Fix check of the command word to handle
	absolute paths.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Add a symlink from mageec-gcc to mageec-g++ at
	install time.
	* Driver.cpp: Add the ability to specify a command to invokve g++
	from the GCC wrapper. Depending on whether the mageec-gcc,
	mageec-gfortran or mageec-g++ is called this will use the
	corresponding command -fmageec-g?? command from the command line.

2017-01-24  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Convert input filenames to be absolute filenames for
	internal use.
