@@ -1,3 +1,8 @@
+2017-05-03  Edward Jones  <ed.jones@embecosm.com>
+
+	* Driver.cpp: Update doxygen comments.
+	* Parameters.h: Likewise.
+
 2017-04-19  Edward Jones  <ed.jones@embecosm.com>
 
 	* CMakeLists.txt: Create more wrappers for various mpi*
